@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2010 by Terraneo Federico                               *
+ *   Copyright (C) 2010, 2011, 2012 by Terraneo Federico                   *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -657,8 +657,7 @@ public:
         // No hardware flow control, SDIO_CK generated on rising edge, 1bit bus
         // width, no clock bypass, no powersave.
         // Set low clock speed 400KHz, 72MHz/400KHz-2=178
-        SDIO->CLKCR=CLOCK_400KHz;
-        SDIO->CLKCR |= SDIO_CLKCR_CLKEN;
+        SDIO->CLKCR=CLOCK_400KHz | SDIO_CLKCR_CLKEN;
     }
 
     /**
@@ -752,21 +751,18 @@ void ClockController::calibrateClockSpeed()
     {
         selected=(minFreq+maxFreq)/2;
         DBG("Trying CLKCR=%d\n",selected);
-        SDIO->CLKCR=selected;
-        SDIO->CLKCR |= CLKCR_FLAGS;
+        SDIO->CLKCR=selected | CLKCR_FLAGS;
         if(Disk::read(reinterpret_cast<unsigned char*>(buffer),0,1))
             minFreq=selected;
         else maxFreq=selected;
     }
     //Last round of algorithm
-    SDIO->CLKCR=maxFreq;
-    SDIO->CLKCR |= CLKCR_FLAGS;
+    SDIO->CLKCR=maxFreq | CLKCR_FLAGS;
     if(Disk::read(reinterpret_cast<unsigned char*>(buffer),0,1))
     {
         DBG("Optimal CLKCR=%d\n",maxFreq);
     } else {
-        SDIO->CLKCR=minFreq;
-        SDIO->CLKCR |= CLKCR_FLAGS;
+        SDIO->CLKCR=minFreq | CLKCR_FLAGS;
         DBG("Optimal CLKCR=%d\n",minFreq);
     }
 
@@ -789,8 +785,7 @@ bool ClockController::IRQreduceClockSpeed()
     if(currentClkcr<10) currentClkcr++;
     else currentClkcr+=2;
 
-    SDIO->CLKCR=currentClkcr;
-    SDIO->CLKCR |= CLKCR_FLAGS;
+    SDIO->CLKCR=currentClkcr | CLKCR_FLAGS;
     return true;
 }
 
@@ -1101,16 +1096,6 @@ private:
 
 /**
  * \internal
- * Datasheet says that there must be at least seven clock cycles between
- * two accesses to SDIO->POWER, and this ensures this constraint.
- */
-static inline void sevenNop()
-{
-    __NOP(); __NOP(); __NOP(); __NOP(); __NOP(); __NOP(); __NOP();
-}
-
-/**
- * \internal
  * Initialzes the SDIO peripheral in the STM32
  */
 static void initSDIOPeripheral()
@@ -1129,14 +1114,20 @@ static void initSDIOPeripheral()
     }
 
     SDIO->POWER=0; //Power off state
+    delayUs(1);
     SDIO->CLKCR=0;
     SDIO->CMD=0;
     SDIO->DCTRL=0;
     SDIO->ICR=0xc007ff;
-    sevenNop();
     SDIO->POWER=SDIO_POWER_PWRCTRL_1 | SDIO_POWER_PWRCTRL_0; //Power on state
+    //This delay is particularly important: when setting the POWER register a
+    //glitch on the CMD pin happens. This glitch has a fast fall time and a slow
+    //rise time resembling an RC charge with a ~6us rise time. If the clock is
+    //started too soon, the card sees a clock pulse while CMD is low, and
+    //interprets it as a start bit. No, setting POWER to powerup does not
+    //eliminate the glitch.
+    delayUs(10);
     ClockController::setLowSpeedClock();
-    sevenNop();
 }
 
 /**
