@@ -1,0 +1,204 @@
+:1000000000000220F1080000210400002D0400007F
+:100010003904000045040000510400000000000005
+:100020000000000000000000000000005D0400006F
+:100030006904000000000000750400008104000055
+:100040008D04000099040000A5040000B104000024
+:10005000BD040000C9040000D5040000E104000054
+:10006000ED040000F9040000050500001105000082
+:100070001D050000290500003505000041050000B0
+:100080004D050000590500006505000071050000E0
+:100090007D0500008905000095050000A105000010
+:1000A000AD050000B9050000C5050000D105000040
+:1000B000DD050000E9050000F5050000010600006F
+:1000C0000D0600001906000025060000310600009C
+:1000D0003D060000490600005506000061060000CC
+:1000E0006D060000790600008506000091060000FC
+:1000F0009D060000A9060000B5060000C10600002C
+:10010000CD060000D9060000E5060000F10600005B
+:10011000FD06000009070000150700002107000088
+:100120002D070000390700004507000051070000B7
+:100130005D070000690700007507000081070000E7
+:100140008D07000099070000A5070000B107000017
+:10015000BD070000C9070000D5070000E107000047
+:10016000ED070000F9070000050800001108000075
+:100170001D080000290800003508000041080000A3
+:100180004D0800000F2A30B404460D4636D941EA26
+:10019000000313F0030F32D18C4603461446DCF8FB
+:1001A0000050103C1D60DCF804505D60DCF8085025
+:1001B0009D60DCF80C500CF1100CDD6010330F2C3E
+:1001C000EDD8103A22F00F0502F00F021035441955
+:1001D0004D19032A12D9002355F803C044F803C06F
+:1001E0000433C3EB020CBCF1030FF5D8043A22F040
+:1001F000030302F003020433E418ED183AB10023BC
+:1002000015F803C004F803C001339342F8D130BCA1
+:10021000704700BF10F0030F844630B40ED0002AA0
+:1002200044D0013ACCB2034602E0002A3ED0013A63
+:1002300003F8014B13F0030F9C46F6D1032A2DD986
+:1002400001F0FF040F2A654688BF634644EA042490
+:1002500088BF154644EA044410D9103D1C605C6018
+:100260009C60DC6010330F2DF7D8103A22F00F0598
+:1002700002F00F021035032A65440ED90023EC501A
+:100280000433C3EB020CBCF1030FF8D8043A22F09C
+:10029000030302F003020433ED18AC4632B1C9B2D5
+:1002A00000230CF8031001339A42FAD130BC704796
+:1002B000044B1A6B42F480521A630122A3F50063C7
+:1002C0009A6070470038024000230B6010F8012B41
+:1002D00012F0800F0CD002F07F029A40D1F800C0DB
+:1002E00007334CEA0202232B0A60EFD1012000E021
+:1002F0000020704730B585B00D2205460A49684692
+:10030000FFF740FF6C46094A0DF10A03023405F07D
+:100310000F01515C2D0903F8011DA342F7D1684676
+:1003200000F0F6FB05B030BD0C0C0000F80B00002F
+:10033000F0B5002585B000F00FFB4FF0C046FFF789
+:10034000B7FF2C462E4F00E0022400F0C9FB10F04E
+:10035000800F36D140380428F6D8DFE800F00317C4
+:100360001C272B00274800F0D3FB274800F0D0FBC8
+:10037000012C08BF254803D0022C14BF244825486F
+:1003800000F0C6FB244800F0C3FBDEE7002C0CBFE6
+:1003900001240224D9E7012CD6D1204800F1040120
+:1003A000006880F3088809680847CEE73868FFF7D7
+:1003B000A1FFCAE70025FFF77BFF4FF0C0462C46A0
+:1003C000C3E7012CC0D1052395FBF3F203FB1252C6
+:1003D00004A98A18013502F80C0C95FBF3F203FB13
+:1003E0001253002BB1D101A803A9FFF76DFF00281C
+:1003F000AAD0039B46F8043B039B3B60A5E700BFE4
+:1004000000300240190C0000480C0000800C000075
+:10041000790C00008C0C0000160C0000000000603D
+:1004200001480068004700000800006001480068BB
+:10043000004700000C000060014800680047000011
+:1004400010000060014800680047000014000060D0
+:10045000014800680047000018000060014800687B
+:10046000004700002C0000600148006800470000C1
+:10047000300000600148006800470000380000605C
+:1004800001480068004700003C0000600148006827
+:10049000004700004000006001480068004700007D
+:1004A0004400006001480068004700004800006008
+:1004B00001480068004700004C00006001480068E7
+:1004C000004700005000006001480068004700003D
+:1004D00054000060014800680047000058000060B8
+:1004E00001480068004700005C00006001480068A7
+:1004F00000470000600000600148006800470000FD
+:100500006400006001480068004700006800006067
+:1005100001480068004700006C0000600148006866
+:1005200000470000700000600148006800470000BC
+:100530007400006001480068004700007800006017
+:1005400001480068004700007C0000600148006826
+:10055000004700008000006001480068004700007C
+:1005600084000060014800680047000088000060C7
+:1005700001480068004700008C00006001480068E6
+:10058000004700009000006001480068004700003C
+:100590009400006001480068004700009800006077
+:1005A00001480068004700009C00006001480068A6
+:1005B00000470000A00000600148006800470000FC
+:1005C000A40000600148006800470000A800006027
+:1005D0000148006800470000AC0000600148006866
+:1005E00000470000B00000600148006800470000BC
+:1005F000B40000600148006800470000B8000060D7
+:100600000148006800470000BC0000600148006825
+:1006100000470000C000006001480068004700007B
+:10062000C40000600148006800470000C800006086
+:100630000148006800470000CC00006001480068E5
+:1006400000470000D000006001480068004700003B
+:10065000D40000600148006800470000D800006036
+:100660000148006800470000DC00006001480068A5
+:1006700000470000E00000600148006800470000FB
+:10068000E40000600148006800470000E8000060E6
+:100690000148006800470000EC0000600148006865
+:1006A00000470000F00000600148006800470000BB
+:1006B000F40000600148006800470000F800006096
+:1006C0000148006800470000FC0000600148006825
+:1006D000004700000001006001480068004700007A
+:1006E0000401006001480068004700000801006044
+:1006F00001480068004700000C01006001480068E4
+:100700000047000010010060014800680047000039
+:1007100014010060014800680047000018010060F3
+:1007200001480068004700001C01006001480068A3
+:1007300000470000200100600148006800470000F9
+:1007400024010060014800680047000028010060A3
+:1007500001480068004700002C0100600148006863
+:1007600000470000300100600148006800470000B9
+:100770003401006001480068004700003801006053
+:1007800001480068004700003C0100600148006823
+:100790000047000040010060014800680047000079
+:1007A0004401006001480068004700004801006003
+:1007B00001480068004700004C01006001480068E3
+:1007C0000047000050010060014800680047000039
+:1007D00054010060014800680047000058010060B3
+:1007E00001480068004700005C01006001480068A3
+:1007F00000470000600100600148006800470000F9
+:100800006401006001480068004700006801006062
+:1008100001480068004700006C0100600148006862
+:1008200000470000700100600148006800470000B8
+:100830007401006001480068004700007801006012
+:1008400001480068004700007C0100600148006822
+:10085000004700008001006038B50D46044602E004
+:1008600054F8043B9847AC42FAD338BD08B500F0C1
+:1008700059F91248124A1349121AFFF783FC124819
+:10088000124A0021121AFFF7C5FC11481149FFF75F
+:10089000E3FF11481149FFF7DFFF11491148FFF746
+:1008A000DBFFFFF745FD104A104BD16801F4E06112
+:1008B00041EA0303D360BFF34F8FFEE7000000203F
+:1008C00000000020980C0000000000200000002024
+:1008D000940C0000940C0000940C0000940C000098
+:1008E000940C0000940C000000ED00E00400FA05F8
+:1008F000684620F007018D4608B5FFF7B7FF0000F6
+:10090000024B1888C0F34010704700BF0010014030
+:10091000024B1888C0F3C010704700BF00100140A0
+:100920000C4B1A6B42F004021A635A6C42F010022C
+:100930005A64A3F594334FF400529A8100221A822C
+:100940009A8240F209221A819A8992B242F00C02EC
+:100950009A81704700380240F8B5404E404D336BE5
+:10096000404CDFF804E143F07F0333634FF0AA33D8
+:10097000AB60DFF8F8C0A360CEF808303C4B3D48D0
+:10098000CCF808303C4B3D4983603D4B3D4A8B6081
+:1009900003F12B4393603C4B3C4F2B603C4B23605B
+:1009A0003C4BCEF800303C4BCCF800303B4B036066
+:1009B0003B4B0B6040F6AA2313600023EB60E7601B
+:1009C000384FCEF80C70384FCCF80C704FF42A57D3
+:1009D000C760364FCF60364FD76010276F616361B5
+:1009E000CEF81430CCF8143043614B615361314B75
+:1009F0002B62314B6B62314D2562314D6562314C5A
+:100A0000CEF82040304CCEF82440DFF8C0E0CCF8DF
+:100A100020E0DFF8BCE0CCF824E0DFF8B8C0C0F894
+:100A200020C04FF0CC3CC0F824C02B48DFF8ACC04D
+:100A30000862C1F824C0106253620123B36341F21B
+:100A400011024FF020431A604FF400725A60B368ED
+:100A500043F48003B360FFF763FFF8BD0038024042
+:100A6000000002400004024000080240000C024066
+:100A7000AFEFFFFB00100240AFEAFFFF001402409F
+:100A8000FFAFAAFF00180240AAA9AAAA20A0080046
+:100A90008A0AA2AAA81AAA022A8AAAA21A80AAAA1A
+:100AA000AA1A00AA008000A0802000080040AA0026
+:100AB00000A0AAAABBBB50B570A70A00BB0050009B
+:100AC0000BBBBBCCB0BBBB00CCCC0C00CC0CCCC0AB
+:100AD000CCCC0CCCCC0000C0CCCCCC000000CCCC1E
+:100AE00008B5FFF70DFF0028FBD0024B9888C0B275
+:100AF00008BD00BF0010014010B50446FFF708FF15
+:100B00000028FBD0014B9C8010BD00BF00100140AD
+:100B100010B5044601E0FFF7EFFF14F8010B0028C1
+:100B2000F9D110BD2F4B82B01A6842F001021A6051
+:100B300000229A60196821F0847121F480311960D3
+:100B400029495960196821F480211960DA600192FD
+:100B500000921A6842F480321A601A6802F4003275
+:100B60000092019A01320192009A1AB9019AB2F5E3
+:100B7000A06FF2D11B4B1B6813F4003318BF012385
+:100B80000093009B012B26D1164B9A689A609A68B5
+:100B900042F400429A609A6842F4A0529A60134A62
+:100BA0005A601A6842F080721A6019680D4A11F092
+:100BB000007FFAD00E4B40F203711960936823F066
+:100BC00003039360936843F002039360936803F018
+:100BD0000C03082BFAD1074B4FF000629A6002B069
+:100BE000704700BF0038024010300024193C400517
+:100BF000003C024000ED00E030313233343536370E
+:100C000038396162636465660000000030782E2E1A
+:100C10002E2E2E2E2E2E0D0A004C6F616465722032
+:100C200076312E30383A2054657272616E656F20CD
+:100C3000466564657269636F20546563686E6F6CA6
+:100C40006F676965730D0A004465766963653A20CC
+:100C500073746D3332663230377A670D0A4D656DC5
+:100C60006F72793A203531324B42797465730D0ACF
+:100C70005374617475733A200049646C650D0A0001
+:100C8000526563656976696E670D0A004572726F19
+:040C9000720D0A00D7
+:04000003000008F100
+:00000001FF
